--- a/Project1/templates/Profile.html
+++ b/Project1/templates/Profile.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     <title>Form</title>
 </head>
+<h1 style="font-family: calibri;font: 70px">
+    CREDENTIALS
+  </h1>
 <body>
     <div class="container">
         <div class="row justify-content-center" style="margin-top: 15%;">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                {% if name %}
                 <div class="alert alert-success" role="alert" style="text-align: center;">
                     Registered Sucessfully!
+                    {% endif %}
                 </div>
-                <b>Name : </b> {{ user_details[0] }} <br>
-                <b>Email ID : </b> {{ user_details[1] }} <br>
-                <b>Gender : </b> {{ user_details[2] }}
+                {% if name %}
+                    <b>Name : </b> {{ name }} <br>
+                {% endif %}
+                {% if email %}
+                    <b>Email ID : </b> {{ email }} <br>
+                {% endif %}
+                {% if gender %}
+                    <b>Gender : </b> {{ gender }}
+                {% endif %}
             </div>
         </div>
     </div>
