--- a/Project1/templates/Register.html
+++ b/Project1/templates/Register.html
@@ -2,68 +2,158 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
     <title>Register</title>
 
     <style>
-        input {
+
+        .input-group-prepend {
             width: 100%;
             padding-left: 10px;
             font-size: medium;
         }
 
-        label {
+        .registrationForm label {
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: large;
+            padding-top: 0;
+            padding-left: 8px;
         }
-    </style>
+
+        #gen {
+            padding: 0;
+            margin-top: 0;
+        }
+
+        input[type='radio'] {
+            -webkit-appearance: none;
+            width: 20px;
+            height: 20px;
+            border: 1px solid black;
+            border-radius: 50%;
+            outline: none;
+            background-color: white;
+            margin: 10px 10px 0 12px;
+        }
+
+        input[type='radio']:hover {
+            border: 3px solid black;
+        }
+
+        input[type='radio']:before {
+            content: '';
+            display: block;
+            width: 60%;
+            height: 60%;
+            margin: 20% auto;
+            border-radius: 50%;
+        }
+
+        input[type='radio']:checked:before {
+            background: black;
+            align-items: center;
+        }
+
+        input[type="text"], input[type="password"], input[type="email"], input[type="date"] {
+            border: 1px solid grey;
+            align-items: center;
+            width: 50%;
+            padding: 12px 20px;
+            margin: 8px 10px;
+            box-sizing: border-box;
+        }
+
+        #pop {
+            text-align: center;
+        }
+
+</style>
+   <h1 style="font-family: calibri;font: 70px">
+    CREDENTIALS
+  </h1>
 </head>
-<body style="background-color: #FA8072;">
+
+<body>
+    {% with messages = get_flashed_messages() %} 
+        {% if messages %}
+            {% for msg in messages %}
+
+                <div class="alert alert-warning alert-dismissible fade show" role="alert" id="pop">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                  <strong>{{msg}}</strong> 
+                </div>
+                
+                <script>
+                  $(".alert").alert();
+                </script>
+
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    <h1 style="text-align: center;font: 40px;font-family: calibri">
+        SignUp
+    </h1>
     <div class="container">
-        <div class="row justify-content-center" style="margin-top: 4%;">
+        <div class="row justify-content-center" style="margin-top: 1.5%;">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <h2 style="text-align: center;"> Sign Up </h1>
-                    <form action="/profile" class="registrationForm" method="POST">
-                        <div>
-                            <label for="name">Name</label><br>
-                            <input type="text" name="name" placeholder="Name" maxlength="25" required><br>
+                <form action="/profile" class="registrationForm" method="POST">
+                    <label for="name">Name</label>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"
+                                    aria-hidden="true"></i></span>
+                            <input type="text" placeholder="User Name" name="name" class="form-control"
+                                aria-label="Username" aria-describedby="basic-addon1" required align="center">
                         </div>
-                        <div>
-                            <label for="email">Email Address</label><br>
-                            <input type="email" name="emailID" placeholder="Email" maxlength="50" required><br>
+                    </div>
+                    <label for="email">Email Address</label><br>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"
+                                    aria-hidden="true"></i></span>
+                            <input align = "center" type="email" class="form-control" name="emailID" placeholder="Email" maxlength="50"
+                                required><br>
                         </div>
-                        <div>
-                            <label for="pwd">Password</label><br>
-                            <input type="password" name="pwd" placeholder="Password"
+                    </div>
+                    <label for="pwd">Password</label><br>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-key"
+                                    aria-hidden="true"></i></i></span>
+                            <input align = "center" type="password" name="pwd" placeholder="Password" class="form-control"
                                 pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.*\s).{8,16}$"
                                 title="Password length should be in between 8 and 16 and it should include atleast one lowercase letter, one upper case letter, one digit and a special character"
                                 required><br>
                         </div>
-                        <div>
-                            <label for="conformPassword">Confirm Password</label><br>
-                            <input type="password" id="ucpwd" name="cpwd" placeholder="Password"
-                                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.*\s).{8,16}$"
+                    </div>
+                    <label for="conformPassword">Confirm Password</label><br>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-key"
+                                    aria-hidden="true"></i></span>
+                            <input align = "center" type="password" id="ucpwd" name="cpwd" placeholder="Password"
+                                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.*\s).{8,16}$" class="form-control"
                                 title="Password length should be in between 8 and 16 and it should include atleast one lowercase letter, one upper case letter, one digit and a special character"
                                 required><br>
                         </div>
-                        <label for="gen">Gender</label><br>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="male" name="gender">
-                            <label class="custom-control-label" for="male">Male</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="female" name="gender">
-                            <label class="custom-control-label" for="female">Female</label>
-                        </div>
-                        <div style="padding-top: 10px;">
-                            <button type="submit" class="btn btn-primary" style="width: 150px;">Sign Up</button>
-                        </div>
-                    </form>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="gen">
+                        <label for="gen">Gender</label>
+                        <input type="radio" name="options" id="male" value="Male" required
+                            style="height: 18px; width: 18px; align-items: center;">
+                        <label>Male</label></input>
+                        <input type="radio" name="options" id="female" value="Female" required
+                            style="height: 18px; width: 18px; align-items: center;">
+                        <label>Female</label></input>
+                        <input type="radio" name="options" id="other" value="Other" required
+                            style="height: 18px; width: 18px; align-items: center;">
+                        <label>Other</label></input>
+                    </div>
+                    <div>
+                        <button class = "buttton" type="submit" class="btn btn-primary" style="width: 150px; margin-top: 15px;">Sign Up</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
